<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        style="@style/offer_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_8"
        android:layout_marginStart="@dimen/margin_start_15"
        android:text="@string/checkout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cross"
        android:layout_marginEnd="@dimen/margin_end_15"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:tint="@color/black" />

    <com.apps.onlinegroceriesapps.CustomView.CustomViewCheckOutList
        android:id="@+id/delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginTop="@dimen/margin_top_8"
        app:left_text_icon_col="@string/select_method"
        app:right_text_col="@string/delivery" />

    <com.apps.onlinegroceriesapps.CustomView.CustomViewCheckOutList
        android:id="@+id/payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery"
        android:layout_marginTop="@dimen/margin_top_8"
        app:left_text_icon_col="@string/select_payment_options"
        app:right_text_col="@string/payment" />

    <com.apps.onlinegroceriesapps.CustomView.CustomViewCheckOutList
        android:id="@+id/promocode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment"
        android:layout_marginTop="@dimen/margin_top_8"
        app:left_text_icon_col="Pick Discount"
        app:right_text_col="@string/Promocode" />

    <com.apps.onlinegroceriesapps.CustomView.CustomViewCheckOutList
        android:id="@+id/total_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promocode"
        android:layout_marginTop="@dimen/margin_top_8"
        app:left_text_icon_col="00.00"
        app:right_text_col="Total Cost" />

    <TextView
        android:id="@+id/placeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_20"
        android:layout_marginEnd="@dimen/margin_end_20"
        android:background="@drawable/rect_15"
        android:backgroundTint="@color/start_bg_color"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="Place Order"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_top_70"
        android:layout_marginBottom="@dimen/margin_bottom_70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>