<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.screen.LoginPhoneActivity"
    android:padding="@dimen/default_padding">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_15"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_your_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_30"
        android:text="@string/enter_your_6_digit_code"
        android:textAppearance="@style/heading1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/mobile_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_25"
        android:lineSpacingExtra="9sp"
        android:text="@string/otp"
        android:textAppearance="@style/mobile_numb"
        android:translationY="-4.7sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/start_bg_color"
        app:bar_active_color="@color/start_bg_color"
        app:bar_enabled="true"
        android:layout_marginTop="-20dp"
        app:bar_error_color="@color/red"
        app:bar_height="1.5dp"
        app:bar_inactive_color="@color/ndark_red_main"
        app:bar_margin_bottom="0dp"
        app:bar_margin_left="2dp"
        app:bar_margin_right="2dp"
        app:bar_success_color="@color/nsuccess"
        app:box_margin="0dp"
        app:height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_numb"
        app:length="6"
        app:otp_text_size="20dp" />


    <TextView
        android:id="@+id/resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ic_custom_size"
        android:layout_marginBottom="@dimen/ic_custom_size"
        android:text="@string/resend_code"
        android:fitsSystemWindows="true"
        android:textAppearance="@style/resend_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_login" />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/margin_start_8"
        app:layout_constraintBottom_toBottomOf="@+id/resend_code"
        app:layout_constraintStart_toEndOf="@+id/resend_code"
        app:layout_constraintTop_toTopOf="@+id/resend_code" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:layout_marginEnd="@dimen/ic_custom_size"
        android:layout_marginBottom="@dimen/ic_custom_size"
        android:fitsSystemWindows="true"
        android:backgroundTint="@color/start_bg_color"
        android:rotation="180"
        android:src="@drawable/ic_back"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>